LU-4727 hsm: flush UPDATE lock for restore

When a file is being restored, the MDT has to hold its layout lock.
The MDT uses MOF_RESTORE object flag to mark files in restore state to
prevent glimpse from waiting for the restore to complete.

If object flag MOF_RESTORE on MDT object is set, the MS_RESTORE flag
is transferred back to client by GETATTR request. To make sure that
the flag is surely seen by copy tool client, the MDT has to flush
UPDATE lock before acquiring LAYOUT lock.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I8d11d77a52e2ca35088ab0437b55fcadbd3f5057